--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: fonts/Montserrat-Regular.ttf
+        - asset: fonts/Montserrat-Bold.ttf
+        # Add other font weights and styles if desired
+
   # fonts:
   #   - family: Schyler
   #     fonts:
