--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   sizer: ^2.0.15
   flutter_splash_screen: ^1.0.0+6
 
+  pin_input_text_field: ^4.5.0
+  url_launcher: ^6.1.11
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
