--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   url_launcher: ^6.1.11
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
+  http: ^0.13.6
+  infinite_scroll_pagination: ^3.2.0
 
 dev_dependencies:
   flutter_test:
